<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".TripRequest" android:id="@+id/trip_request" android:minWidth="1480dp"
        android:maxWidth="1480dp" android:minHeight="2040dp" android:maxHeight="2040dp">

    <TextView
            android:text="@string/trip_request"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
            android:id="@+id/trip_confirmed" app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintVertical_bias="0.0" android:textAppearance="@android:style/TextAppearance"
            android:textSize="14sp" android:textColor="@android:color/black"
            app:layout_constraintStart_toEndOf="@+id/back_button"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="@+id/back_button"
            android:textAlignment="center"/>
    <TextView
            android:text="@string/mumbai_central"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
            android:id="@+id/mumbai_central" app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintTop_toBottomOf="@+id/trip_confirmed"
            app:layout_constraintVertical_bias="0.0" android:layout_marginTop="4dp"
            android:textAppearance="@android:style/TextAppearance" android:textSize="14sp"
            android:textColor="@android:color/black" android:layout_marginEnd="3dp"/>
    <Button
            android:text="@string/eighteen"
            android:layout_width="26dp"
            android:layout_height="21dp"
            android:id="@+id/eighteen" app:layout_constraintStart_toStartOf="@+id/mumbai_central"
            app:layout_constraintHorizontal_bias="0.34" app:layout_constraintEnd_toEndOf="@+id/mumbai_central"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintTop_toBottomOf="@+id/mumbai_central"
            android:background="@android:color/holo_blue_dark" android:textAppearance="@android:style/TextAppearance"
            android:textSize="14sp" android:textColor="@android:color/white"
            style="@style/Widget.AppCompat.Button.Borderless" app:layout_constraintVertical_bias="0.0"
            android:textAlignment="center" tools:targetApi="ice_cream_sandwich"/>
    <Button
            android:text="@string/aug"
            android:layout_width="29dp"
            android:layout_height="21dp"
            android:id="@+id/aug" app:layout_constraintStart_toEndOf="@+id/eighteen"
            app:layout_constraintHorizontal_bias="0.0" app:layout_constraintEnd_toEndOf="@+id/mumbai_central"
            app:layout_constraintTop_toBottomOf="@+id/mumbai_central" app:layout_constraintBottom_toBottomOf="parent"
            style="@style/Widget.AppCompat.Button.Borderless" android:backgroundTint="@android:color/holo_blue_dark"
            android:background="@android:color/holo_blue_dark" android:textAppearance="@android:style/TextAppearance"
            android:textSize="12sp" android:textColor="@android:color/white" app:layout_constraintVertical_bias="0.0"
            android:textAlignment="center" tools:targetApi="lollipop"/>
    <TextView
            android:text="@string/from"
            android:layout_width="0dp"
            android:layout_height="16dp"
            android:id="@+id/from"
            android:textAppearance="@android:style/TextAppearance"
            android:textSize="12sp" android:textColor="@android:color/darker_gray" android:textAlignment="viewStart"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintHorizontal_bias="0.0" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/eighteen"
            android:layout_marginStart="2dp"/>
    <EditText
            android:layout_width="0dp"
            android:layout_height="36dp"
            android:text="@string/exit_3"
            android:ems="10"
            android:id="@+id/exit_3"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/from"
            android:inputType="text" android:hint="@string/exit_3"
            android:textAppearance="@android:style/TextAppearance" android:textSize="14sp"
            android:textColor="@android:color/black" app:layout_constraintVertical_bias="0.0"
            android:textAlignment="viewStart" android:autofillHints="" tools:targetApi="o"/>
    <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" app:srcCompat="?android:attr/actionModeCloseDrawable"
            android:id="@+id/back_button"
            android:background="@android:color/transparent" android:visibility="visible"
            android:tint="@android:color/holo_blue_dark" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintHorizontal_bias="0.0" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintVertical_bias="0.0" android:contentDescription="@string/back"
            android:onClick="goToStationsScreenFromTripRequestScreenViaBackButton"
            tools:targetApi="lollipop" android:backgroundTint="@android:color/transparent"/>
    <TextView
            android:text="@string/to"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/to" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintHorizontal_bias="0.0" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintTop_toBottomOf="@+id/exit_3"
            app:layout_constraintVertical_bias="0.0"
            android:textAppearance="@android:style/TextAppearance" android:textSize="14sp"
            android:textColor="@android:color/darker_gray" android:textAlignment="viewStart"
            android:layout_marginStart="2dp"/>
    <EditText
            android:layout_width="0dp"
            android:layout_height="36dp"
            android:inputType="textPersonName"
            android:text="@string/enter_location"
            android:ems="10"
            android:id="@+id/enter_location"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/to" app:layout_constraintVertical_bias="0.0"
            android:hint="@string/enter_location" android:textAppearance="@android:style/TextAppearance"
            android:textSize="14sp" android:textColor="@android:color/darker_gray" android:autofillHints=""
            tools:targetApi="o"/>
    <TextView
            android:text="@string/luggages"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/luggages" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintHorizontal_bias="0.0" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintTop_toBottomOf="@+id/enter_location"
            android:textAppearance="@android:style/TextAppearance"
            android:textSize="12sp" android:textColor="@android:color/darker_gray"
            app:layout_constraintVertical_bias="0.0" android:textAlignment="viewStart"
            android:layout_marginStart="2dp"/>
    <TextView
            android:text="@string/two_luggages"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/two_luggages"
            android:textAppearance="@android:style/TextAppearance" android:textSize="14sp"
            android:textColor="@android:color/black" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintHorizontal_bias="0.0" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintTop_toBottomOf="@+id/luggages"
            app:layout_constraintVertical_bias="0.0" android:textAlignment="viewStart"/>

    <TextView
            android:text="@string/weight_of_1st_luggage_in_kg"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/weight_of_first_luggage" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintHorizontal_bias="0.0" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintTop_toBottomOf="@+id/two_luggages"
            android:textAppearance="@android:style/TextAppearance"
            android:textSize="12sp" android:textColor="@android:color/darker_gray"
            app:layout_constraintVertical_bias="0.0" android:textAlignment="viewStart"
            android:layout_marginStart="2dp"/>
    <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/sixteen_point_five"
            android:ems="10"
            android:id="@+id/sixteen_point_five" android:hint="@string/sixteen_point_five"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/weight_of_first_luggage"
            app:layout_constraintVertical_bias="0.0" android:textAppearance="@android:style/TextAppearance"
            android:textSize="14sp" android:textColor="@android:color/black" android:autofillHints=""
            tools:targetApi="o" android:inputType="numberDecimal"/>
    <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/enter_weight"
            android:ems="10"
            android:id="@+id/enter_weight"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/weight_of_second_luggage"
            app:layout_constraintVertical_bias="0.0" android:hint="@string/enter_weight"
            android:textAppearance="@android:style/TextAppearance" android:textSize="14sp"
            android:textColor="@android:color/darker_gray" android:autofillHints="" tools:targetApi="o"
            android:inputType="numberDecimal"/>
    <TextView
            android:text="@string/weight_of_2nd_luggage_in_kg"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/weight_of_second_luggage" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintHorizontal_bias="0.0" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/sixteen_point_five"
            android:textAppearance="@android:style/TextAppearance" android:textSize="12sp"
            android:textColor="@android:color/darker_gray"
            app:layout_constraintVertical_bias="0.0" android:layout_marginStart="2dp"/>
    <Button
            android:text="@string/next"
            android:layout_width="280dp"
            android:layout_height="wrap_content"
            android:id="@+id/next" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintHorizontal_bias="0.5" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintTop_toBottomOf="@+id/enter_weight"
            android:textAppearance="@android:style/TextAppearance" android:textSize="14sp"
            android:textColor="@android:color/white" android:background="@android:color/holo_blue_dark"
            app:layout_constraintVertical_bias="0.0"
            android:onClick="goToTripRequest2ScreenFromTripRequestScreenViaNextButton"
            tools:targetApi="ice_cream_sandwich"/>
    <Button
            android:text="@string/trip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/trip" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintHorizontal_bias="0.0" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintTop_toBottomOf="@+id/next"
            android:textAppearance="@android:style/TextAppearance" android:textSize="12sp"
            android:textColor="@android:color/holo_blue_dark"
            app:layout_constraintVertical_bias="1.0" tools:targetApi="ice_cream_sandwich"/>
    <Button
            android:text="@string/chats"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
            android:id="@+id/chats" android:textAppearance="@android:style/TextAppearance" android:textSize="12sp"
            android:textColor="@android:color/black"
            app:layout_constraintTop_toBottomOf="@+id/next"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintVertical_bias="1.0"/>
    <Button
            android:text="@string/profile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/profile" app:layout_constraintStart_toEndOf="@+id/chats"
            app:layout_constraintHorizontal_bias="1.0" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/weight_of_first_luggage"
            app:layout_constraintVertical_bias="1.0" android:textAppearance="@android:style/TextAppearance"
            android:textSize="12sp" android:textColor="@android:color/black"/>
    <ImageButton
            android:layout_width="56dp"
            android:layout_height="18dp" app:srcCompat="@android:drawable/arrow_down_float"
            android:id="@+id/number_of_luggages_arrow"
            app:layout_constraintStart_toEndOf="@+id/to" app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintTop_toBottomOf="@+id/luggages"
            android:visibility="visible" android:background="@android:color/transparent"
            android:tint="@android:color/darker_gray" android:contentDescription="@string/number_of_luggages"
            tools:targetApi="donut"/>
</android.support.constraint.ConstraintLayout>